<?xml version="1.0"?>
<package format="3">
  <name>alpasim_msgs</name>
  <version>0.0.1</version>
  <description>ROS 2 message definitions for the AlpaSim bridge.</description>

  <maintainer email="lab@todo.todo">lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
