<?xml version="1.0"?>

<package format="3">
  <name>ego_vehicle_description</name>
  <version>0.0.1</version>

  <description>
    URDF and visualization resources for the AlpaSim ego vehicle.
  </description>

  <maintainer email="lab@todo.todo">lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
